fix: Breakpoint value visibility on frontend

--- a/assets/css/unminified/style.css
+++ b/assets/css/unminified/style.css
@@ -3145,6 +3145,13 @@ body {
   float: right;
 }
 
+.main-header-bar-wrap::before {
+  position: absolute;
+  overflow: hidden;
+  opacity: 0;
+  visibility: hidden;
+}
+
 .main-header-bar {
   background-color: #fff;
   border-bottom-color: #eaeaea;
