--- a/sass/site/header/_header-common.scss
+++ b/sass/site/header/_header-common.scss
@@ -29,6 +29,12 @@
     .nav-fallback-text {
         float: right;
     }
+    &::before {
+        position: absolute;
+        overflow: hidden;
+        opacity: 0;
+        visibility: hidden;
+    }
 }
 
 .main-header-bar {
